# cytokines-predict

./: README.md  pyproject.toml
configs/data/: dataset.yaml
configs/model/: scvi.yaml
docs/: SCALING.md  methods.md
notebooks/: 01_data_qc.ipynb  02_scvi_preprocessing.ipynb  03_scvi_training.ipynb  04_latent_analysis.ipynb  05_cytokine_prediction.ipynb  06_interpretation.ipynb
requirements/: base.txt
results/cytokine_vectors/: cytokine_vectors.json  gene_stats_unknown.csv  nonlinear_genes_unknown.csv  real_plus_virtual.h5ad  virtual_IFN-beta_to_IL-6.h5ad
results/cytokine_vectors_celltypes/: adata_with_celltypes.h5ad  gene_stats_unknown.csv  nonlinear_genes_unknown.csv  real_plus_virtual.h5ad  summary.json  virtual_IFN-beta_to_IL-6.h5ad
results/scvi_il6_ifnb/: adata_with_scvi.h5ad  config_used.json  de_il6_vs_ifnb.csv  metrics.json
scripts/: download_cytokine_data.py  run_cytokine_vectors.py  run_scvi_pipeline.py  run_scvi_pipeline.sh
src/celltyping/: __init__.py  annotate.py  plots.py  reference.py
src/cytokine_vectors/: __init__.py  counterfactuals.py  evaluation.py  plots.py  utils.py  vectors.py
src/data/: download.py  preprocess.py
src/evaluation/: evaluate.py
src/interpretation/: interpret.py
src/models/: cytokine_predictor.py  scvi_model.py
src/training/: train_scvi.py
src/utils/: config.py
src/visualization/: plots.py
tests/: test_cytokine_vectors.py  test_scvi_pipeline.py
