[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cytokine-dictionary-scvi"
version = "0.1.0"
description = "A laptop-friendly scVI-only pipeline for the single-cell cytokine dictionary."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Cytokine Dictionary Team"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
